fixed mobile bug with cards being cut off

--- a/src/app/(authenticated)/dashboard/page.module.css
+++ b/src/app/(authenticated)/dashboard/page.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    overflow-y: auto;
+
     overflow-x: hidden;
     background-color: #f5f5f5;
     position: relative;
@@ -23,7 +23,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    flex-grow: 1;
+    overflow: hidden;
 }
 
 .largeHeading {
