--- a/src/components/dashboard/cards/dashboard-cards/Card.module.css
+++ b/src/components/dashboard/cards/dashboard-cards/Card.module.css
@@ -10,7 +10,7 @@
     padding-inline: var(--padding-block-medium);
     gap: var(--padding-block-medium);
     position: relative;
-    overflow: hidden;
+
     z-index: 1;
 }
 
@@ -23,20 +23,20 @@
 .titleRow {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    position: relative;
     margin-block-end: var(--padding-block-medium);
+    height: 5rem;
     z-index: 1;
 }
 
 .titleRow::after {
     content: "";
     position: absolute;
-    width: calc(100% + 200px);
-    height: calc(100% + 200px);
+    width: calc(100%);
+    height: 6rem;
     background-color: #f9efff;
-    top: -180px;
-    left: -100px;
+    top: 0;
+    left: 0;
     z-index: -1;
 }
